# ElectroVision

./: .gitignore  BLOG_POST.txt  CHANGELOG.md  ELECTROVISION_OVERVIEW.txt  README.md  main.py  pyproject.toml  requirements.txt  run.bat  run_rag_build.bat  start.bat
.claude/: settings.local.json
projects/esp32_weather_station/: esp32_weather_station.kicad_pcb
server/: app.py
src/: app.py
src/ai/: bridge.py  ollama_utils.py
src/algorithms/: __init__.py  autorouter.py
src/core/: project.py  project_io.py
src/generators/: bom_generator.py  cadquery_executor.py  code_generator.py  descriptive_stl.py  gerber_generator.py  jlcpcb_generator.py  kicad_generator.py  netlist_generator.py  pdf_generator.py  stl_generator.py
src/ui/: main_window.py  tray.py
src/utils/: colors.py  units.py
src/validators/: pcb_drc.py  stl_validator.py
tests/: test_autorouter.py  test_bom_generator.py  test_code_generator.py  test_copper_and_symbol.py  test_descriptive_stl.py  test_erc.py  test_kicad_parser.py  test_net_classes_and_variants.py  test_new_modules.py  test_pcb_drc.py  test_testpoints_drcprofiles.py
training_data/: Modelfile  README.md  build_rag.py
training_data/code/: arduino_reference.md  esp32_gpio_full_reference.md  esp32_idf_reference.md  freertos_patterns.md  micropython_esp32_quickref.md  micropython_machine_reference.md  rp2040_micropython_reference.md  stm32_hal_reference.md
training_data/pcb/: cadquery_api_full_reference.md  electronics_formulas.md  kicad_from_docs.md  pcb_design_rules.md
training_data/qa_pairs/: pcb_qa.jsonl
(+72 files in other folders)
